--- a/styles.css
+++ b/styles.css
@@ -6,27 +6,53 @@
 
 /*STRUCTURAL ELEMENTS*/
 body {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: 15% auto 35%;
+  grid-template-rows: 5% 35% 60%;
+  grid-template-areas: 
+    "sidebar nav ."
+    "sidebar header ."
+    "sidebar table article";
 }
 
 aside {
-  background-color: magenta; 
+  background-color: #354052; 
+  color: #CCC;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  grid-column: 1 / span 1;
+  grid-row: 1 / span 3;
 }
 
+
 main {
-  background-color: lightblue;
+  background-color: #edf2f8;
 }
 
 header {
-  background-color: yellow;
+  background-color: #FFF;
+  grid-row: 2 / span 1;
+  grid-column: 2 / span 2;
 }
 
-#main-wrapper {
-  border: 1px solid black;
+.top-nav {
+  grid-column: 2 / span 2;
+  grid-row: 1 / span 1;
+}
+
+form {
+  display: grid;
+  grid-template-columns: 10% 60% 10% 10% 10%;
+  grid-template-rows: 100%;
+  grid-template-areas: "1 2 3 4 5";
+  height: 5rem;
+}
+
+article {
+  background-color: #edf2f8;
+  grid-row: 3 / span 1;
+  grid-column: 3 / span 1;
 }
 
 /*TYPOGRAPHY*/
@@ -34,20 +60,42 @@ header {
 ul {
   list-style: none;
   padding-left: 0;
+  font-size: 1.2em;
+  font-variant: small-caps;
+  line-height: 2em;
 }​
 
 li {
+  color: #CCC;
   list-style-type: none;
-  font-variant: small-caps;
 }
 
+li:hover {
+  background-color: #2c3547;
+  color: #FFF;
+}
 
+h4 {
+  margin-bottom: 10px;
+}
+
+h5 {
+  color: #6f7e95;
+  font-weight: 700;
+}
 
 /*SIDEBAR*/
+.profile-menu {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 #profile-pic {
   border: 0;
   border-radius: 50%;
   height: 100px;
+  margin: 10px;
   padding: 10px;
   width: 100px;
 }
@@ -62,17 +110,108 @@ select {
 
 .side-menu {
   align-content: flex-start;
-  border-top: 1px solid black;
+  border-bottom: 0;
+  border-top: 3px solid #162339;
   display: flex;
   flex-direction: column;
-  padding: 5px;
+  padding: 15px;
 }
 
-/*MAIN-NAV*/
+.checkbox {
+  display: inline-block;
+  margin-right: 0;
+}
+
+label {
+  margin: 0px;
+  display: inline-block;
+  position: relative;
+}
+
+.profile-name {
+  font-weight: 400;
+}
+
+i {
+  margin: 0px 15px 0px 0px;
+}
+
+/*TOP-NAV-FORM*/
+.top-nav-btn {
+  background-color: #FFF;
+  color: #CCC;
+}
+
+#hamburger-btn {
+  grid-column: 1 / span 1;
+  grid-row: 1 / span 1;
+}
+
+.main-search {
+  grid-column: 2 / span 1;
+  grid-row: 1 / span 1;
+}
+
+#add-person-btn {
+  grid-column: 3 / span 1;
+  grid-row: 1 / span 1;
+}
+
+#list-btn {
+  grid-column: 4 / span 1;
+  grid-row: 1 / span 1;
+}
+
+#network-btn {
+  grid-column: 5 / span 1;
+  grid-row: 1 / span 1;
+}
+
+.main-search::placeholder {
+  color: #939598;
+  size: 2em;
+}
 
 /*HEADER*/
+#header-profile-div {
+  display: flex;
+  flex-direction: row;
+  margin: 20px;
+}
 
-/*MAIN NAV*/
+#name-div {
+  width: 50%;
+}
+
+#profile-button-div{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 50%
+}
+
+#bullet {
+  display: inline-block;
+  margin: 0px 12px;
+}
+
+p,
+.preview-text {
+  display: inline-block;
+  text-decoration-line: none;
+}
+
+/*TAB NAV*/
+#tab-nav {
+  display: flex;
+  flex-direction: row;
+}
+
+.tab-li {
+  display: inline-block;
+  margin: auto;
+}
 
 /*MAIN PARAGRAPH RULE*/
 
@@ -81,4 +220,24 @@ select {
 /*BUTTONS*/
 
 /*SIDE ARTICLE*/
+
+/*BUTTONS*/
+.rounded-btn {
+    border: 2px solid #gray;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    color: #f5f5f5;
+    text-align: center;
+    text-decoration: none;
+    background: rgba(0, 0, 0, 0);
+    font-size: 20px;
+    font-weight: bold;
+}
+
+/*.rounded-btn:hover {
+    box-shadow: 0 0 3px gray;
+
+}*/
 
