--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@ li {
 }
 
 li:hover {
-  background-color: #2c3547;
+  background-color: #2C3547;
   color: #FFF;
 }
 
@@ -82,6 +82,15 @@ h4 {
 h5 {
   color: #6f7e95;
   font-weight: 700;
+}
+
+a {
+  color: #33cccc;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #009999;
 }
 
 /*SIDEBAR*/
@@ -111,7 +120,7 @@ select {
 .side-menu {
   align-content: flex-start;
   border-bottom: 0;
-  border-top: 3px solid #162339;
+  border-top: 3px solid #28303F;
   display: flex;
   flex-direction: column;
   padding: 15px;
@@ -132,9 +141,11 @@ label {
   font-weight: 400;
 }
 
-i {
+i { 
   margin: 0px 15px 0px 0px;
 }
+
+
 
 /*TOP-NAV-FORM*/
 .top-nav-btn {
@@ -148,8 +159,28 @@ i {
 }
 
 .main-search {
+  border: 0;
+  display: inline-block;
   grid-column: 2 / span 1;
   grid-row: 1 / span 1;
+  font-size: .75em;
+  margin-top: 1.4em;
+  width: 80%;
+}
+
+.main-search:focus {
+  outline: none;
+}
+
+.main-search-div {
+  border: 1px;
+  border-color: #CCC;
+  text-align: center;
+  padding: 0px 0px 0px 20px;
+}
+
+.fa-search {
+  margin-left: 10px
 }
 
 #add-person-btn {
@@ -169,7 +200,7 @@ i {
 
 .main-search::placeholder {
   color: #939598;
-  size: 2em;
+  size: 4em;
 }
 
 /*HEADER*/
@@ -180,15 +211,15 @@ i {
 }
 
 #name-div {
-  width: 50%;
+  width: 70%;
 }
 
-#profile-button-div{
+#profile-button-div {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  width: 50%
+  width: 30%;
 }
 
 #bullet {
@@ -206,11 +237,20 @@ p,
 #tab-nav {
   display: flex;
   flex-direction: row;
+  min-height: 40px;
 }
 
 .tab-li {
+  color: #999;
   display: inline-block;
   margin: auto;
+  font-weight: 700;
+}
+
+.tab-li:hover {
+  background-color: #FFF;
+  color: #333;
+  border-bottom: 2px solid #333;
 }
 
 /*MAIN PARAGRAPH RULE*/
@@ -222,18 +262,50 @@ p,
 /*SIDE ARTICLE*/
 
 /*BUTTONS*/
+#main-search-div,
+.top-nav-btn {
+  border: .05em;
+  border-color: #CCC;
+  border-style: solid;
+  color: #999;
+  font-size: 1.5em;
+}
+
+.top-nav-btn:hover {
+  background-color: #33cccc;
+  color: #FFF;
+  text-decoration: none;
+}
+
+.top-nav-btn:active {
+  background-color: #009999;
+  color: #FFF;
+}
+
 .rounded-btn {
-    border: 2px solid #gray;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    line-height: 50px;
-    color: #f5f5f5;
-    text-align: center;
-    text-decoration: none;
-    background: rgba(0, 0, 0, 0);
-    font-size: 20px;
-    font-weight: bold;
+  border: .1em;
+  border-color: #CCC;
+  border-style: solid;
+  border-radius: 50%;
+  width: 3em;
+  height: 3em;
+  line-height: 0;
+  color: #999;
+  text-align: center;
+  text-decoration: none;
+  background: rgba(0, 0, 0, 0);
+  font-size: 1em;
+  font-weight: bold;
+}
+
+button i {
+  margin: 0 auto;
+}
+
+#open-btn {
+  border-radius: 2em;
+  padding: 1em;
+  width: auto;
 }
 
 /*.rounded-btn:hover {
