--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 /*STRUCTURAL ELEMENTS*/
 body {
   display: grid;
-  grid-template-columns: 15% auto 30%;
+  grid-template-columns: 18% auto 30%;
   grid-template-rows: 5% 35% 60%;
   grid-template-areas: 
     "sidebar nav ."
@@ -64,11 +64,11 @@ article {
 
 /*TYPOGRAPHY*/
 ul {
-  list-style: none;
-  padding-left: 0;
   font-size: 1.5em;
   font-variant: small-caps;
   line-height: 2em;
+  list-style: none;
+  padding-left: 0;
 }​
 
 li {
@@ -87,6 +87,7 @@ h1 {
 
 h2 {
   font-size: 1.5em;
+  font-weight: 400;
   margin-bottom: 10px;
 }
 
@@ -102,6 +103,10 @@ h5 {
   font-size: 1em;
   font-weight: 700;
   padding: 10px 5px;
+}
+
+label {
+  font-size: 1.2em;
 }
 
 a {
@@ -122,6 +127,9 @@ a:hover {
   margin-bottom: 10px;
 }
 
+i { 
+  margin: 0px 15px 0px 20px;
+}
 
 /*SIDEBAR*/
 .profile-menu {
@@ -141,21 +149,12 @@ a:hover {
   padding: 10px;
 }
 
-#hiring-pic {
-  border: 0;
-  border-radius: 50%;
-  display: inline-block;
-  height: 40px;
-  margin-right: 10px;
-  width: 40px;
+.fa-caret-down {
+  margin: 0;
 }
 
 #side-menu-1 {
   text-align: center;
-}
-
-select {
-  width: 50%;
 }
 
 .side-menu {
@@ -168,28 +167,6 @@ select {
   min-height: 250px;
   padding: 10px 0px;
 }
-
-.checkbox {
-  display: inline-block;
-  margin-right: 0;
-}
-
-label {
-  display: inline-block;
-  font-size: 1.2em;
-  margin: 0px;
-  position: relative;
-}
-
-.profile-name {
-  font-weight: 400;
-}
-
-i { 
-  margin: 0px 15px 0px 20px;
-}
-
-
 
 /*TOP-NAV-FORM*/
 .top-nav-btn {
@@ -261,10 +238,10 @@ i {
 }
 
 #profile-button-div {
+  align-items: center;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  align-items: center;
   width: 30%;
 }
 
@@ -284,7 +261,7 @@ p,
   color: #33CCCC;
 }
 
-/*TAB NAV*/
+/*TAB NAV BAR*/
 #tab-nav {
   display: flex;
   flex-direction: row;
@@ -294,15 +271,15 @@ p,
 .tab-li {
   color: #999;
   display: inline-block;
-  margin: auto;
   font-weight: 700;
+  margin: auto;
 }
 
 .tab-li:hover, 
 #summary-tab {
   background-color: #FFF;
-  color: #333;
   border-bottom: 2px solid #333;
+  color: #333;
 }
 
 .menu-tab {
@@ -337,12 +314,12 @@ p,
   color: #354052;
   display: inline-block;
   font-size: 3em;
-  width: 3.1em;
   height: 3.1em;
-  padding: .8em 0;
-  text-align: center;
   line-height: .5em;
   margin: 20px;
+  padding: .8em 0;
+  text-align: center;
+  width: 3.1em;
 }
 
 .small-font-span {
@@ -358,23 +335,23 @@ p,
 }
 
 .graph-image {
-  max-height: 200px;
-  margin: 0 auto;
   align-self: center;
+  margin: 0 auto;
+  max-height: 200px;
 }
 
-/*MAIN PARAGRAPH RULE*/
+/*PARAGRAPH RULE*/
 .paragraph-rule-holder {
+  align-items: center;
   background-color: #edf2f6;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  align-items: center;
   min-height: 15px;
   width: 100%;
 }
+
 .paragraph-rule {
-  background-color: pink;
   border-top: 2px solid #CCC;
   height: 2px;
   width: 45%;
@@ -385,14 +362,14 @@ table {
   background-color: white;
   border: 0;
   box-shadow: 0px 0px 3px #CCC;
-  height: 95%;
   font-size: 1.2em;
   font-weight: 700;
+  height: 95%;
 }
 
 thead {
-  color: #FFF;
   background-color: #666;
+  color: #FFF;
   font-weight: 700;
   font-variant: small-caps;
   height: 100px;
@@ -413,8 +390,8 @@ tr td {
 
 .table-column1 {
   font-variant: small-caps;
-  padding: 10px;
   min-width: 200px;
+  padding: 10px;
 }
 
 .table-column2 {
@@ -424,9 +401,18 @@ tr td {
 }
 
 .hiring-pic-span {
+  align-items: center;
   display: flex;
   flex-direction: row;
-  align-items: center;
+}
+
+#hiring-pic {
+  border: 0;
+  border-radius: 50%;
+  display: inline-block;
+  height: 40px;
+  margin-right: 10px;
+  width: 40px;
 }
 
 /*SIDE ARTICLE*/
@@ -440,9 +426,6 @@ tr td {
   border-top: 1px solid #CCC;
 }
 
-
-
-/*ARTICLE*/
 .code-span {
   background-color: #FFF;
   display: flex;
@@ -480,19 +463,19 @@ tr td {
 }
 
 .rounded-btn {
+  background-color: rgba(0, 0, 0, 0);
   border: .1em;
   border-color: #CCC;
   border-style: solid;
   border-radius: 50%;
-  width: 3em;
-  height: 3em;
-  line-height: 0;
   color: #999;
-  text-align: center;
-  text-decoration: none;
-  background-color: rgba(0, 0, 0, 0);
+  height: 3em;
   font-size: 1em;
   font-weight: bold;
+  line-height: 0;
+  text-align: center;
+  text-decoration: none;
+  width: 3em;
 }
 
 button i {
@@ -504,9 +487,9 @@ button i {
 #open-btn {
   background-color: #FFF;
   border-radius: 2em;
+  margin: auto;
   padding: 1em;
   width: auto;
-  margin: auto;
 }
 
 #open-btn {
@@ -557,8 +540,8 @@ button i {
 .social-button {
   color: #FFF;
   font-weight: 700;
-  padding: 1em;
   margin: .5em 0em;
+  padding: 1em;
 }
 
 .social-button i {
@@ -568,6 +551,7 @@ button i {
   margin-left: 10px;
 }
 
+.copy-button:hover,
 #table-edit-btn:hover,
 .social-button:hover {
   box-shadow: inset 0 0 0 1000px rgba(0,0,0,.4);
@@ -590,16 +574,13 @@ button i {
   background-color: #33CCCC;
   color: #FFF;
   display: inline-block;
-  letter-spacing: 1px;
   font-size: .8em;
   font-weight: 700;
+  letter-spacing: 1px;
   min-width: 80px;
 }
 
-.copy-button:hover {
-  box-shadow: inset 0 0 0 1000px rgba(0,0,0,.4);
-}
-
+/*MEDIA QUERIES*/
 @media screen and (max-width: 1100px){
   body {
     grid-template-columns: 60% 40%;
@@ -642,7 +623,6 @@ button i {
     font-size: .9em;
     min-width: 200px;
   }
-
 }
 
 @media screen and (max-width: 1012px){
@@ -650,7 +630,7 @@ button i {
     margin: 5px;
   }
 
-    .charts-article {
+  .charts-article {
     flex-direction: column;
   }
 
@@ -663,7 +643,6 @@ button i {
     align-items: flex-end;
     width: 50%;
   }
-  
 }
 
 @media screen and (max-width: 800px){
@@ -742,9 +721,6 @@ button i {
   article {
     padding: 2em 5em;
   }
-
-
-
 }
 
 @media screen and (max-width: 640px){
@@ -769,13 +745,13 @@ button i {
     border-style: unset;
     border-radius: unset;
     display: flex;
-    justify-content: center;
     font-size: 2em;
-    width: 100%;
     height: 1em;
-    padding: .7em;
+    justify-content: center;
     line-height: .5em;
     margin: 5px 0px;
+    padding: .7em; 
+    width: 100%;
   }
 
   .small-font-span {
@@ -813,8 +789,8 @@ button i {
     display: flex;
     flex-direction: column;
     margin-left: 0px;
-    width: 100%;
     padding: 0px;
+    width: 100%;
   }
 
   #header-profile-div {
@@ -873,4 +849,3 @@ button i {
     padding: 10px;
   }
 }
-
