--- a/styles.css
+++ b/styles.css
@@ -361,6 +361,7 @@ p,
 table {
   background-color: white;
   border: 0;
+  border-collapse: collapse;
   box-shadow: 0px 0px 3px #CCC;
   font-size: 1.2em;
   font-weight: 700;
